<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVerdeTinte7"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:alpha="0.3"
                android:src="@drawable/adonis_tesis6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_iupsm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/text_descripcion_acerca_de_iupsm"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="15dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_top" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/text_descripcion_acerda_de_her"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:src="@mipmap/desarrollo_foreground" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:src="@mipmap/idea_foreground" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:src="@mipmap/laptop_foreground" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:src="@mipmap/perfil_foreground" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/text_description_acerca_de_developer"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/text_description_acerca_de_developer_description"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center"
                    android:text="@string/text_description_acerca_de_developer_name"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</LinearLayout>