<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVerdeTinte7"
    tools:context=".presenter.ValidacionActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_marginVertical="200dp"
                android:alpha="0.2"
                android:scaleType="center"
                android:src="@drawable/inteligencia_artificial" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/robot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/text_alert_validate"
                    android:textColor="@color/colorVerdeSombra7"
                    android:textSize="25dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/text_description_validate"
                    android:textColor="@color/colorVerdeSombra5"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/robot1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.7"
                    android:text="@string/text_description_validate_advance"
                    android:textColor="@color/colorVerdeSombra5"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/scrollView"
        android:background="@color/colorVerdeSombra1"
        android:onClick="buttonContinuarSelectHandler"
        android:text="Continuar"
        android:textColor="@color/colorVerdeTinte5" />
</RelativeLayout>