<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVerdeTinte7"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:alpha="0.3"
                android:scaleType="center"
                android:src="@drawable/adonis_tesis5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/colorVerde" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imagenDoctor"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@mipmap/doctor_foreground" />

                        <TextView
                            android:id="@+id/textViewBienvenido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Bienvenido"
                            android:textColor="@color/colorVerdeSombra6"
                            android:textSize="30dp" />

                        <TextView
                            android:id="@+id/textViewEspecialidadPersonal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Especialidad"
                            android:textColor="@color/colorVerdeSombra5"
                            android:textSize="25dp" />

                        <TextView
                            android:id="@+id/textViewNombreDoctor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Nombre Doctor"
                            android:textColor="@color/colorVerdeSombra5"
                            android:textSize="25dp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="pacienteButtonHandler"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:scaleType="center"
                            android:src="@mipmap/pacientes_foreground" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:orientation="vertical"
                            android:weightSum="10">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_margin="2dp"
                                android:layout_weight="3"
                                android:text="@string/title_paciente"
                                android:textColor="@color/colorVerdeSombra5"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:text="@string/description_pacientes"
                                android:textColor="@color/colorVerdeTono7"
                                android:textSize="15dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:scaleType="center"
                            android:src="@mipmap/apreder_foreground" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:orientation="vertical"
                            android:weightSum="10">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_margin="2dp"
                                android:layout_weight="3"
                                android:text="@string/title_aprender"
                                android:textColor="@color/colorVerdeSombra5"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:text="@string/description_aprender"
                                android:textColor="@color/colorVerdeTono7"
                                android:textSize="15dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="acercaDeButtonHandler"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:scaleType="center"
                            android:src="@mipmap/acercade_foreground" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:orientation="vertical"
                            android:weightSum="10">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_margin="2dp"
                                android:layout_weight="3"
                                android:text="@string/title_acerca_de"
                                android:textColor="@color/colorVerdeSombra5"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:text="@string/description_acerca_de"
                                android:textColor="@color/colorVerdeTono7"
                                android:textSize="15dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:onClick="agregarSignoButtonHandler"-->
                    <!--android:text="signo" />-->

                    <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:onClick="agregarPacienteButtonHandler"-->
                    <!--android:text="paciente" />-->

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>